# PieceBreaker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
code/: Makefile  board.cpp  board.h  declarations.h  evaluate.cpp  evaluate.h  functions.cpp  functions.h  main.cpp  move.cpp  move.h  movecheck.cpp  movecheck.h  movegenerators.cpp  movegenerators.h  node.cpp  node.h  position.cpp  position.h  search.cpp  search.h
src/: CMakeLists.txt  Makefile  board.cpp  board.h  declarations.h  evaluate.cpp  evaluate.h  functions.cpp  functions.h  input_provider.cpp  input_provider.h  logger.cpp  logger.h  main.cpp  move.cpp  move.h  movecheck.cpp  movecheck.h  movegenerators.cpp  movegenerators.h  node.cpp  node.h  position.cpp  position.h  search.cpp  search.h  uci.cpp  uci.h
tests/: CMakeLists.txt  board_tests.cpp  endings_tests.cpp  fen_test.cpp  move_test.cpp  move_validation_tests.cpp
tests/unit_tests/: CMakeLists.txt  board_tests.cpp  endings_tests.cpp  move_generation.cpp  move_tests.cpp  move_validation_tests.cpp  position_tests.cpp
